<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/screen"
    android:padding="40dp"
    tools:context=".RegisterFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:title="@string/register_title"
        />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="110dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_hello"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_sign_up"
                android:textColor="@color/white"
                android:textSize="50sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/register_email"
            android:inputType="textEmailAddress"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/register_password"
            android:inputType="textPassword"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/register_password_repeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/register_repeatPassword"
            android:inputType="textPassword"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/register_firstName"
            android:inputType="text"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/register_lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/register_lastName"
            android:inputType="text"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/register_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/register_phone"
            android:inputType="phone"
            tools:ignore="HardcodedText,TouchTargetSizeCheck" />


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/register_image"
            android:layout_width="80sp"
            android:layout_height="80sp"
            android:background="@drawable/layout_bg"
            app:srcCompat="@drawable/ic_menu_camera"
            android:contentDescription="@string/register_image_desc"
            android:clickable="true"
            android:focusable="true" />


    </LinearLayout>
    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/register_signIn"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_btn"
        android:textColor="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_text"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/register_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_signIn"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:textColor="@color/blue"/>

    </LinearLayout>

</LinearLayout>